--- a/memoire/TODO.txt
+++ b/memoire/TODO.txt
@@ -3,10 +3,8 @@
 -
 
 ### NOTES:
-- ajout de signes pour distinguers les notes
-- explciation pour la prise de notes dans la partie dédiée
-- ne pas utiliser le N mais quand on selectionne du texte une îcone apparait
-
+- jump ton note when click on note prises panel
+- scroll to bottom of notes panel when last child
 
 
 ### BOOK:
